Edit to Tableau Data

--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -4428,7 +4428,283 @@
     "dfcomp = project_functions1.electricitycomp(\"../data/raw/owid-energy-data.csv\")\n",
     "\n",
     "# Save the dataframe to csv in the project repository data/processed folder\n",
-    "df.to_csv(\"../data/processed/electricitycomparison.csv\", index=None)"
+    "dfcomp.to_csv(\"../data/processed/electricitycomparison.csv\", index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>Carbon Intensity</th>\n",
+       "      <th>Low Carbon Electricity</th>\n",
+       "      <th>Per Capita Low Carbon</th>\n",
+       "      <th>Share from Low Carbon Sources</th>\n",
+       "      <th>Electricity Generation</th>\n",
+       "      <th>Per Capita Generation</th>\n",
+       "      <th>Electricity Demand</th>\n",
+       "      <th>Per Capita Demand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>20779958.0</td>\n",
+       "      <td>1.128379e+10</td>\n",
+       "      <td>255.319</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>14.918</td>\n",
+       "      <td>65.957</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>22.618</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>27.430277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>21606992.0</td>\n",
+       "      <td>1.102127e+10</td>\n",
+       "      <td>118.644</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>23.141</td>\n",
+       "      <td>84.746</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>27.306</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>31.934107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>22600774.0</td>\n",
+       "      <td>1.880487e+10</td>\n",
+       "      <td>144.928</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>24.778</td>\n",
+       "      <td>81.159</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>30.530</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>34.954555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>23680872.0</td>\n",
+       "      <td>2.107434e+10</td>\n",
+       "      <td>255.319</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>26.604</td>\n",
+       "      <td>67.021</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>39.694</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>43.917302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>24726690.0</td>\n",
+       "      <td>2.233257e+10</td>\n",
+       "      <td>269.663</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>22.648</td>\n",
+       "      <td>62.921</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>35.993</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>40.037708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4501</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>14030338.0</td>\n",
+       "      <td>2.096179e+10</td>\n",
+       "      <td>442.815</td>\n",
+       "      <td>3.32</td>\n",
+       "      <td>236.630</td>\n",
+       "      <td>48.680</td>\n",
+       "      <td>6.82</td>\n",
+       "      <td>486.090</td>\n",
+       "      <td>8.67</td>\n",
+       "      <td>617.946624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4502</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>14236599.0</td>\n",
+       "      <td>2.194784e+10</td>\n",
+       "      <td>363.885</td>\n",
+       "      <td>4.26</td>\n",
+       "      <td>299.229</td>\n",
+       "      <td>58.276</td>\n",
+       "      <td>7.31</td>\n",
+       "      <td>513.465</td>\n",
+       "      <td>9.53</td>\n",
+       "      <td>669.401449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4503</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>14438812.0</td>\n",
+       "      <td>2.271535e+10</td>\n",
+       "      <td>358.160</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>373.992</td>\n",
+       "      <td>59.146</td>\n",
+       "      <td>9.13</td>\n",
+       "      <td>632.324</td>\n",
+       "      <td>10.15</td>\n",
+       "      <td>702.966421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4504</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>14645473.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>288.240</td>\n",
+       "      <td>7.65</td>\n",
+       "      <td>522.346</td>\n",
+       "      <td>67.639</td>\n",
+       "      <td>11.31</td>\n",
+       "      <td>772.252</td>\n",
+       "      <td>12.42</td>\n",
+       "      <td>848.043624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4505</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>14862927.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>279.028</td>\n",
+       "      <td>7.63</td>\n",
+       "      <td>513.358</td>\n",
+       "      <td>68.677</td>\n",
+       "      <td>11.11</td>\n",
+       "      <td>747.497</td>\n",
+       "      <td>12.22</td>\n",
+       "      <td>822.179911</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4506 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Year      Country  Population           GDP  Carbon Intensity  \\\n",
+       "0     2000  Afghanistan  20779958.0  1.128379e+10           255.319   \n",
+       "1     2001  Afghanistan  21606992.0  1.102127e+10           118.644   \n",
+       "2     2002  Afghanistan  22600774.0  1.880487e+10           144.928   \n",
+       "3     2003  Afghanistan  23680872.0  2.107434e+10           255.319   \n",
+       "4     2004  Afghanistan  24726690.0  2.233257e+10           269.663   \n",
+       "...    ...          ...         ...           ...               ...   \n",
+       "4501  2016     Zimbabwe  14030338.0  2.096179e+10           442.815   \n",
+       "4502  2017     Zimbabwe  14236599.0  2.194784e+10           363.885   \n",
+       "4503  2018     Zimbabwe  14438812.0  2.271535e+10           358.160   \n",
+       "4504  2019     Zimbabwe  14645473.0           NaN           288.240   \n",
+       "4505  2020     Zimbabwe  14862927.0           NaN           279.028   \n",
+       "\n",
+       "      Low Carbon Electricity  Per Capita Low Carbon  \\\n",
+       "0                       0.31                 14.918   \n",
+       "1                       0.50                 23.141   \n",
+       "2                       0.56                 24.778   \n",
+       "3                       0.63                 26.604   \n",
+       "4                       0.56                 22.648   \n",
+       "...                      ...                    ...   \n",
+       "4501                    3.32                236.630   \n",
+       "4502                    4.26                299.229   \n",
+       "4503                    5.40                373.992   \n",
+       "4504                    7.65                522.346   \n",
+       "4505                    7.63                513.358   \n",
+       "\n",
+       "      Share from Low Carbon Sources  Electricity Generation  \\\n",
+       "0                            65.957                    0.47   \n",
+       "1                            84.746                    0.59   \n",
+       "2                            81.159                    0.69   \n",
+       "3                            67.021                    0.94   \n",
+       "4                            62.921                    0.89   \n",
+       "...                             ...                     ...   \n",
+       "4501                         48.680                    6.82   \n",
+       "4502                         58.276                    7.31   \n",
+       "4503                         59.146                    9.13   \n",
+       "4504                         67.639                   11.31   \n",
+       "4505                         68.677                   11.11   \n",
+       "\n",
+       "      Per Capita Generation  Electricity Demand  Per Capita Demand  \n",
+       "0                    22.618                0.57          27.430277  \n",
+       "1                    27.306                0.69          31.934107  \n",
+       "2                    30.530                0.79          34.954555  \n",
+       "3                    39.694                1.04          43.917302  \n",
+       "4                    35.993                0.99          40.037708  \n",
+       "...                     ...                 ...                ...  \n",
+       "4501                486.090                8.67         617.946624  \n",
+       "4502                513.465                9.53         669.401449  \n",
+       "4503                632.324               10.15         702.966421  \n",
+       "4504                772.252               12.42         848.043624  \n",
+       "4505                747.497               12.22         822.179911  \n",
+       "\n",
+       "[4506 rows x 12 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfcomp"
    ]
   },
   {
@@ -4441,7 +4717,148 @@
     "df_elecmix = project_functions1.elecmix(\"../data/raw/owid-energy-data.csv\")\n",
     "\n",
     "# Save the dataframe to csv in the project repository data/processed folder\n",
-    "df.to_csv(\"../data/processed/electricitymix.csv\", index=None)"
+    "df_elecmix.to_csv(\"../data/processed/electricitymix.csv\", index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Electricity Mix</th>\n",
+       "      <th>Per Capita Electricity (KW-hrs)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>42.313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>41.242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>41.605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>5.701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>biofuel</td>\n",
+       "      <td>5.518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21725</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>3.700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21726</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>5.097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21727</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>7.485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21728</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>11.031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21729</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>wind</td>\n",
+       "      <td>24.362</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21730 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Year  Country Electricity Mix  Per Capita Electricity (KW-hrs)\n",
+       "0      2014   Angola         biofuel                           42.313\n",
+       "1      2015   Angola         biofuel                           41.242\n",
+       "2      2016   Angola         biofuel                           41.605\n",
+       "3      2017   Angola         biofuel                            5.701\n",
+       "4      2018   Angola         biofuel                            5.518\n",
+       "...     ...      ...             ...                              ...\n",
+       "21725  2017  Vietnam            wind                            3.700\n",
+       "21726  2018  Vietnam            wind                            5.097\n",
+       "21727  2019  Vietnam            wind                            7.485\n",
+       "21728  2020  Vietnam            wind                           11.031\n",
+       "21729  2021  Vietnam            wind                           24.362\n",
+       "\n",
+       "[21730 rows x 4 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_elecmix"
    ]
   },
   {
