--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -1540,6 +1540,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coal_mix_df = dfAnalysis.sort_values('Share of electricity generation that comes from coal', ascending=False)\n",
+    "# coal_mix_df = coal_mix_df[['Year', 'Country', 'Share of electricity generation that comes from coal']]\n",
+    "# coal_mix_df = coal_mix_df.loc[coal_mix_df['Year'] == 2018]\n",
+    "# coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str.contains('World')]\n",
+    "# coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str.contains('countries')]\n",
+    "# coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str.contains('Asia')]\n",
+    "# coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str.contains('North America')]\n",
+    "# coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str.contains('South America')]\n",
+    "# coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str.contains('Europe')]\n",
+    "# coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str.contains('Oceania')]\n",
+    "# # coal_mix_df = coal_mix_df.loc[~coal_mix_df['Country'].str == ('Africa')]\n",
+    "# coal_mix_df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "# plt.figure(figsize=(12, 12))\n",
+    "# sns.barplot(x='Country', y='Share of electricity generation that comes from coal', data=coal_mix_df)\n",
+    "# plt.ylabel('Percentage of Energy Produced via Coal')\n",
+    "# plt.xlabel('Country')\n",
+    "# plt.xticks(rotation=90)\n",
+    "# plt.title('Percentage of Electricity Generation via Coal (2018)')\n",
+    "# plt.savefig('elec_generation_2018.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1950,6 +1978,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
